tests/NormalTests/paczka1/fuzzy1/49540475.err
Error in line 6: 5l0S A50 82,4
Error in line 9: zhmAHq A50 1,6
Error in line 17: 5l0S S311 70,3
Error in line 27: xYHsAEXaPK A752 6,5
Error in line 22: 5l0S A947 95,9
Error in line 32: 5l0S A752 1,4
Error in line 35: S311 A752 39,4
Error in line 39: S311 A50 18,4
